<resources>
    <string name="app_name">Noveltie</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="logo">\"Agregamos valor tecnológico a su empresa\"</string>
    <string name="servt1">Desarrollamos</string>
    <string name="servt2">Soluciones Tecnológicas</string>
    <string name="modal">COMPRAR</string>
    <string name="textProd">Producto</string>

    <!--Menu -->
    <string name="action_settings">Settings</string>
    <string name="action_buscar">Buscar</string>
    <string name="action_comprar">Comprar</string>

    <string name="nav_inicio">Inicio</string>
    <string name="nav_servicios">Servicios</string>
    <string name="nav_nosotros">Nosotros</string>
    <string name="nav_blog">Blog</string>
    <string name="nav_contacto">Contacto</string>

    <!--Menu -->
    <!-- SOBRE NOSOTROS -->
    <string name="txt_tlef1">+52 952949785</string>
    <string name="txt_tlef2">+52 995921377</string>
    <string name="txt_tlef3">+51 952917079</string>
    <string name="txt_titTedNos">Teléfono</string>
    <string name="txt_titFace">Contáctanos</string>
    <string name="txt_titDirecc">Dirección</string>
    <string name="txt_novel">Noveltie</string>
    <string name="txt_writeUs">Escribenos</string>
    <string name="txt_ubic">Ubicanos</string>
    <string name="txt_direcc">Distrito Gregorio Albarracin, Urb. Perez Gamboa Mz D Lt 03  --  Tacna - Perú</string>
    <string name="txt_direccWeb">https://noveltie.la</string>
    <string name="txt_descrip">Noveltie es una empresa peruana, de la industria de software especializada en desarrollo de plataformas ecommerce (comercio electrónico) y software de gestión empresarial (ERP) a medida, cuenta con amplia experiencia en el desarrollo de productos digitales para el sector comercio, turismo e industria; asimismo brinda servicios de desarrollo ágil a medida y consultoría en tecnología e innovación a empresas en Perú, Chile y Argentina.</string>


    <string name="action_llamada">Llamar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_serv_plan">Servicios</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!--Botones -->
    <string name="btnServEcomm">¿Deseas vender por internet?</string>
    <string name="btncomprar">AGREGAR AL CARRITO</string>
    <string name="btnsegcomp">SEGUIR COMPRANDO</string>
    <string name="btnrealcomp">REALIZAR COMPRA</string>
    <string name="textDoingPed">REALIZAR PEDIDO</string>
    <string name="text_llamar">LLAMAR</string>
    <string name="text_enviarMEnsaje">ENVIAR MENSAJE</string>


    <!--Descripcion de planes -->
    <string name="textDesc">Descripción</string>
    <string name="textModulo">Módulos</string>
    <string name="title_activity_plan_descrp">PlanDescrp</string>

    <!-- BLOG -->
    <string name="textTitBlog1">El Blog de \ </string>
    <string name="textTitBlog2">Noveltie</string>
    <string name="close">Cerrar</string>
    <string name="error_activity_not_found">Error</string>

    <!--Descripcion de planes -->
    <string name="textDoPed">Datos para realizar pedido</string>

        <string name="title_activity_comments">Comments</string>
        <string name="action_comment">Comment</string>
        <string name="action_refresh">Reload</string>

    <!-- BLOG -->
    <string name="title1Serv">Desarrollamos</string>
    <string name="title2Serv">Soluciones Tecnológicas</string>
    <string name="title_activity_servicios">Servicios</string>
    <string name="title_activity_blog_detalle">BlogDetalle</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_serv_detalle">ServDetalle</string>

    <!-- CONTACTO -->
    <string name="cont_nombreRazSocial">Nombre - Razón Social</string>
    <string name="cont_email">E-mail</string>
    <string name="cont_telefonos">Teléfonos</string>
    <string name="cont_ciudad">Ciudad</string>
    <string name="cont_direcc">Dirección de la Empresa</string>
    <string name="cont_desc">Cuéntenos de su proyecto</string>
    <string name="cont_enviar">Enviar</string>
    <string name="cont_hint1">Su nombre o nombre de la Empresa</string>
    <string name="cont_hint2">ejemplo@correo.com</string>
    <string name="cont_hint3">Whatsapp - Celular - RPM</string>
    <string name="cont_hint4">Ciudad - País</string>
    <string name="cont_hint5">Calle - Número - Referencia</string>
    <string name="cont_hint6">Escriba su mensaje</string>
    <string name="cont_hint7">Enviar</string>
    <string name="txt_subContact">Es importante que ingrese los siguientes datos para comunicarnos con usted</string>


</resources>
