<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="Inicio" />
        <item
            android:id="@+id/nav_nosotros"
            android:icon="@drawable/ic_menu_people"
            android:title="@string/nav_nosotros" />
        <item
            android:id="@+id/nav_servicios"
            android:icon="@drawable/ic_menu_assignment"
            android:title="@string/nav_servicios" />

        <item
            android:id="@+id/nav_blog"
            android:icon="@drawable/ic_menu_blog"
            android:title="@string/nav_blog" />
        <item
            android:id="@+id/nav_contacto"
            android:icon="@drawable/ic_menu_email"
            android:title="@string/nav_contacto" />
    </group>
</menu>
