<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFondoGeneral">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/fondoMenuDraw"
                android:text="@string/txt_subContact"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/colorPrimaryText"
                android:textStyle="normal"/>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edt_ContactNombre"
                    style="@style/cont_editText"
                    android:hint="@string/cont_hint1"
                    android:inputType="text"/>
            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorSecondaryText"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edt_ContactEmail"
                    style="@style/cont_editText"
                    android:hint="@string/cont_email"
                    android:inputType="textEmailAddress"/>
            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorSecondaryText"/>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edt_ContactTelef"
                    style="@style/cont_editText"
                    android:hint="@string/cont_hint3"
                    android:inputType="phone"/>
            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorSecondaryText"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edt_ContactCiudad"
                    style="@style/cont_editText"
                    android:hint="@string/cont_hint4"
                    android:inputType="text"/>
            </android.support.design.widget.TextInputLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorSecondaryText"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edt_direcc"
                    style="@style/cont_editText"
                    android:hint="@string/cont_direcc"
                    android:inputType="text"/>
            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorSecondaryText"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_Mensaje"
                    style="@style/cont_editText"
                    android:layout_height="match_parent"
                    android:inputType="textMultiLine|textLongMessage"
                    android:hint="@string/cont_hint6"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_enviarForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:ems="10"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorBlanco"
                android:textStyle="bold"
                android:text="@string/cont_hint7"/>

        </LinearLayout>

</ScrollView>


</android.support.design.widget.CoordinatorLayout>