<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFondoGeneral">


    <android.support.v4.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="320dp"
                android:layout_height="80dp"
                android:src="@mipmap/noveltie"
                android:scaleType="fitStart"
                android:contentDescription="@string/app_name"
                android:layout_margin="5dp"/>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:contentPadding="12dp"
                card_view:cardElevation="2dp"
                android:background="@color/colorBlanco"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_descrip"
                    android:textStyle="normal"
                    android:layout_marginBottom="5dp"/>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:contentPadding="10dp"
                card_view:cardElevation="2dp"
                android:background="@color/colorBlanco"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_titTedNos"
                        android:textStyle="bold"
                        android:layout_marginBottom="5dp"/>

                    <LinearLayout
                        android:id="@+id/layout_telefono1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="5dp"
                        android:padding="5dp"
                        android:background="@drawable/layout_background">
                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/call2"
                            android:scaleType="centerCrop"
                            android:contentDescription="@string/txt_tlef2"
                            android:background="@android:color/transparent"
                            android:layout_gravity="center|end"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_tlef2"
                            android:layout_gravity="center|start"
                            android:layout_weight="1"
                            android:layout_marginRight="15dp"
                            android:layout_marginLeft="15dp"/>

                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/layout_telefono2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="5dp"
                        android:padding="5dp"
                        android:background="@drawable/layout_background">
                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/ic_llamar"
                            android:scaleType="centerCrop"
                            android:contentDescription="@string/txt_tlef3"
                            android:background="@android:color/transparent"
                            android:layout_gravity="center|end"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_tlef3"
                            android:layout_gravity="center|start"
                            android:layout_marginRight="15dp"
                            android:layout_marginLeft="15dp"/>


                    </LinearLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorDivider"
                        android:layout_marginBottom="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_titFace"
                        android:textStyle="bold"
                        android:layout_marginBottom="5dp"/>

                    <LinearLayout
                        android:id="@+id/layout_web"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="5dp"
                        android:padding="5dp"
                        android:background="@drawable/layout_background">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/web1"
                            android:scaleType="centerCrop"
                            android:contentDescription="@string/txt_tlef3"
                            android:background="@android:color/transparent"
                            android:layout_gravity="center|end"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_direccWeb"
                            android:layout_marginRight="15dp"
                            android:layout_marginLeft="15dp"
                            android:layout_gravity="center|start"/>

                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/layout_facebook"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="5dp"
                        android:padding="5dp"
                        android:background="@drawable/layout_background">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/facebook"
                            android:scaleType="centerCrop"
                            android:contentDescription="@string/txt_tlef3"
                            android:layout_gravity="center"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_novel"
                            android:layout_marginRight="15dp"
                            android:layout_marginLeft="15dp"
                            android:layout_gravity="center"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout_messenger"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="5dp"
                        android:padding="5dp"
                        android:background="@drawable/layout_background">
                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/messenger"
                            android:scaleType="centerCrop"
                            android:contentDescription="@string/txt_writeUs"
                            android:background="@android:color/transparent"
                            android:layout_gravity="center|end"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_writeUs"
                            android:layout_marginRight="15dp"
                            android:layout_marginLeft="15dp"
                            android:layout_gravity="center|start"/>
                    </LinearLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorDivider"
                        android:layout_marginBottom="10dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_ubic"
                        android:textStyle="bold"
                        android:layout_marginBottom="5dp"/>

                    <LinearLayout
                        android:id="@+id/layout_ubicacion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:background="@drawable/layout_background"
                        android:layout_marginBottom="5dp"
                        android:padding="5dp">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/position2"
                            android:scaleType="centerCrop"
                            android:contentDescription="@string/txt_tlef3"
                            android:layout_gravity="center|end"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_direcc"
                            android:layout_marginRight="15dp"
                            android:layout_marginLeft="15dp"
                            android:layout_gravity="center|start"/>

                    </LinearLayout>
                </LinearLayout>


            </android.support.v7.widget.CardView>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
